# TMAtlas

./: LICENSE.md  README.md  pyproject.toml
examples/: README.md  iris_classification.py
src/tmatlas/booleanisation/: __init__.py  thermometer.py
src/tmatlas/exporters/: __init__.py  base.py  csv.py  json.py
src/tmatlas/inspectors/: __init__.py  base.py  features.py  tmu_inspector.py
src/tmatlas/utils/: __init__.py  types.py
