[project]
name = "tmatlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bobpattison123", email = "98764977+bobpattison123@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
